<resources>
	<string name="app_name">Lilac</string>
	<string name="connect">Connect</string>
	<string name="disconnect">Disconnect</string>
	<string name="reset">Reset</string>
	<string name="sweep">Sweep</string>
	<string name="voltage">Voltage</string>
	<string name="current">Current</string>
	<string name="temperature">Temperature</string>
	<string name="continuous">Continuous</string>
	<string name="average">Average</string>
	<string name="debug">Debug Info</string>
	<string name="begin_measurement">Measure</string>
	<string name="end_measurement">Stop Measurement</string>
	<string name="action_settings">Settings</string>
	<string name="about">About</string>

	<string name="file_name_base">IV-data</string>

	<string name="confirm_title">Are You Sure?</string>
	<string name="confirm_message">This action cannot be undone</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>

	<string name="bluetooth_not_supported">Bluetooth is not supported on this device</string>
	<string name="bluetooth_rf_comm_create_failed">RFComm socket create failed</string>
	<string name="bluetooth_socket_create_failed">Create Bluetooth socket failed</string>
	<string name="bluetooth_socket_close_failed">Unable to close Bluetooth socket</string>

	<string name="flag_update_failed">Unable to update flags!</string>

	<string name="pref_connection_title">Connection</string>
	<string name="pref_custom_name_check">Custom Device Name</string>
	<string name="pref_custom_name_summary">Must be no more than 20 characters long</string>
	<string name="pref_custom_name_hint">Enter device name</string>
	<string name="pref_custom_mac_check">Custom MAC Address</string>
	<string name="pref_custom_mac_summary">e.g. 30:14:09:03:01:86</string>
	<string name="pref_custom_mac_hint">Enter MAC address</string>

	<string name="pref_file_title">Files</string>
	<string name="pref_file_data_separator_title">File Data Separator</string>
	<string name="pref_file_data_separator_default">Tab Value</string>
	<string name="pref_email_data_separator_title">Email Data Separator</string>
	<string name="pref_email_data_separator_default">Comma Value</string>
	<string name="pref_auto_save_files_check">Automatically Save Data</string>
	<string name="pref_auto_save_files_check_summary">Automatically saves graphs and data files after measurement</string>

	<string name="pref_measurement_title">Measurements</string>
	<string name="pref_flag_title">Default Measurements</string>
	<string name="pref_flag_summary">Set the quantities to measure by default</string>
	<string name="pref_negative_current_check">Graph Negative Currents</string>
	<string name="pref_negative_current_summary">Allow negative currents to be added to the graph</string>

	<string name="pref_general">General</string>
	<string name="pref_reset_title">Reset</string>
	<string name="pref_reset_summary">Reset all preferences to default</string>
</resources>
