<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
	<item android:id="@+id/menu_item_voltage"
	      android:checkable="true"
	      android:checked="false"
	      android:title="@string/voltage" />
	<item android:id="@+id/menu_item_current"
	      android:checkable="true"
	      android:checked="false"
	      android:title="@string/current" />
	<item android:id="@+id/menu_item_temp"
	      android:checkable="true"
	      android:checked="false"
	      android:title="@string/temperature" />
	<item android:id="@+id/menu_item_debug"
	      android:checkable="true"
	      android:checked="false"
	      android:title="@string/debug" />
	<item android:id="@+id/menu_item_sweep"
	      android:checkable="true"
	      android:checked="false"
	      android:title="@string/sweep" />
	<item android:id="@+id/menu_item_continuous"
	      android:checkable="true"
	      android:checked="false"
	      android:title="@string/continuous" />
	<item android:id="@+id/menu_item_average"
	      android:checkable="true"
	      android:checked="false"
	      android:title="@string/average" />
	<item android:id="@+id/action_settings"
	      android:title="@string/action_settings"
	      android:orderInCategory="100"
	      app:showAsAction="never"/>
	<item android:id="@+id/about"
	      android:orderInCategory="101"
	      android:title="@string/about" />
</menu>
